Controller Pro 1.0.13
=====================
	  
New Features:

  - Updated DSC Security System  to support EnvisaLink and improved current IT100 support
    (Greg Rapp, Phil Taylor, ORCJAVA-302)
  - Update logo to current version (ORCJAVA-429)
  - Update copyright date on home page (ORCJAVA-430)

Bug Fixes:

  - Clean-up testApplicationContext.xml file (ORCJAVA-428)

Controller Pro 1.0.12
=====================

Bug Fixes:

  - Update AMX implementation to use locale independent
    string case conversions (ORCJAVA-338)
  - Update Lutron implementation to use locale independent
    string case conversions (ORCJAVA-339)
  - Fixed Marantz protocol does not always re-connect to AVR (ORCJAVA-410)
  - Fix HTTPCommand to avoid Expect_Continue header for POST and PUT requests (ORCJAVA-415)
  - Fixed invalid XML generated for sensor values (ORCJAVA-416)
  - Fixed Marantz protocol takes a long time to connect to receiver (ORCJAVA-418)
  - Fix for timezone setting in date fields (ORCJAVA-401, Juha Lindfors)

Controller Pro 1.0.11
=====================

New Features:

  - Direct HTTP related logging into its own file in /logs/http/http.log
    (Juha Lindfors) (ORCJAVA-368)
  - Have Samsung protocol as separate jar for Pro release (ORCJAVA-381)
  - Add a polling interval on the DateTime protocol (ORCJAVA-396)
  - Marantz AVR protocol improvements: multiple-zone support and additional commands (ORCJAVA-395)
  - Create unit tests for Marantz protocol implementation (ORCJAVA-408)

Bug Fixes:

  - Reliability updates to Russound integration (Torbjorn Osterdahl) (ORCJAVA-376)
  - Guard against null pointer exception in RRD logger lifecycle
    (Juha Lindfors) (ORCJAVA-356)
  - Fix lagarto configuration to read its settings from controller.xml
    in addition to the config.properties file (Juha Lindfors) (ORCJAVA-264)
  - X10: patch for potential race condition between thread deallocating 
    gateway and thread processing serial port input (Juha Lindfors, ORCJAVA-359)